log/build_2023-10-27_13-08-22/detect_subscriber/stdout_stderr.log
[0m[1m[33mwarning[0m[0m[1m: unused import: `Instant`[0m
[0m [0m[0m[1m[38;5;12m--> [0m[0mdetect_subscriber/src/main.rs:6:27[0m
[0m  [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m6[0m[0m [0m[0m[1m[38;5;12m|[0m[0m [0m[0muse std::time::{Duration, Instant};[0m
[0m  [0m[0m[1m[38;5;12m| [0m[0m                          [0m[0m[1m[33m^^^^^^^[0m
[0m  [0m[0m[1m[38;5;12m|[0m
[0m  [0m[0m[1m[38;5;12m= [0m[0m[1mnote[0m[0m: `#[warn(unused_imports)]` on by default[0m

[0m[1m[38;5;9merror[E0063][0m[0m[1m: missing field `prob` in initializer of `DetObj`[0m
[0m  [0m[0m[1m[38;5;12m--> [0m[0mdetect_subscriber/src/main.rs:43:13[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m43[0m[0m [0m[0m[1m[38;5;12m|[0m[0m [0m[0m            DetObj {[0m
[0m   [0m[0m[1m[38;5;12m| [0m[0m            [0m[0m[1m[38;5;9m^^^^^^[0m[0m [0m[0m[1m[38;5;9mmissing `prob`[0m

[0m[1m[38;5;9merror[E0063][0m[0m[1m: missing field `prob` in initializer of `DetObj`[0m
[0m  [0m[0m[1m[38;5;12m--> [0m[0mdetect_subscriber/src/main.rs:47:13[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m47[0m[0m [0m[0m[1m[38;5;12m|[0m[0m [0m[0m            DetObj {[0m
[0m   [0m[0m[1m[38;5;12m| [0m[0m            [0m[0m[1m[38;5;9m^^^^^^[0m[0m [0m[0m[1m[38;5;9mmissing `prob`[0m

[0m[1mFor more information about this error, try `rustc --explain E0063`.[0m
[0m[0m[1m[31merror[0m[1m:[0m could not compile `detect_subscriber` (bin "detect_subscriber") due to 2 previous errors; 1 warning emitted
[0m[0m[1m[31merror[0m[1m:[0m failed to compile `detect_subscriber v0.1.0 (/home/rgabbai/projects/Rust/obj_det_view_node/detect_subscriber)`, intermediate artifacts can be found at `/home/rgabbai/projects/Rust/obj_det_view_node/build/detect_subscriber/target`.
To reuse those artifacts with a future compilation, set the environment variable `CARGO_TARGET_DIR` to that path.
make[2]: *** [CMakeFiles/detect_subscriber.dir/build.make:70: CMakeFiles/detect_subscriber] Error 101
make[1]: *** [CMakeFiles/Makefile2:137: CMakeFiles/detect_subscriber.dir/all] Error 2
make: *** [Makefile:146: all] Error 2
